--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "An open-source desktop app version of Twitch.tv",
   "main": "index.js",
   "scripts": {
-    "install": "sh ./scripts/install.sh",
-    "start": "electron .",
-    "package": "electron-packager . Twitch_Desktop --platform=win32 --arch=x64"
+    "install:fedora": "sh ./scripts/fedora_install.sh",
+    "start:electron": "electron .",
+    "package:windows": "electron-packager . Twitch_Desktop --platform=win32 --arch=x64"
   },
   "keywords": ["twitch", "desktop", "electron"],
   "author": "devrusty",
